--- a/styles.css
+++ b/styles.css
@@ -98,3 +98,56 @@ main{
     margin-top:2rem;
 }
 
+#Skills-section{
+    text-align: center;
+}
+
+.skills-grid{
+    display: grid;
+    grid-template-columns: repeat(2,minmax(150px,1fr));
+    grid-auto-rows: 1fr;
+
+    justify-items: center;
+    margin:1rem 20%;
+}
+
+.skills-grid figure{
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #000;
+    border-radius: 0.5rem;
+    width: 75%;
+    height: 75%;
+  /*  -webkit-aspect-ratio: 1;*/
+    aspect-ratio: 1;
+}
+
+.skills-grid img{
+    width: 100%;
+    height: 75%;
+    max-width: 10rem;
+    object-fit: contain;
+    margin-bottom: 1rem;
+}
+
+@media (min-width:600px) and (max-width: 900px){
+    .skills-grid{
+        grid-template-columns: repeat(3,minmax(150px,1fr));
+    }
+    .skills-grid :nth-child(8){
+        background-color: bisque;
+        margin-left:115% ;
+    }
+    .skills-grid :nth-child(7){
+        background-color: lightblue;
+        margin-left: 115%;
+    }
+}
+@media (min-width:900px){
+    .skills-grid{
+        grid-template-columns: repeat(4,minmax(150px,1fr));
+    }
+}
