--- a/styles.css
+++ b/styles.css
@@ -138,16 +138,48 @@ main{
         grid-template-columns: repeat(3,minmax(150px,1fr));
     }
     .skills-grid :nth-child(8){
-        background-color: bisque;
         margin-left:115% ;
     }
     .skills-grid :nth-child(7){
-        background-color: lightblue;
         margin-left: 115%;
     }
 }
 @media (min-width:900px){
     .skills-grid{
         grid-template-columns: repeat(4,minmax(150px,1fr));
+    }
+}
+
+.projects-grid{
+    display: grid;
+    grid-template-columns: minmax(150px,1fr);
+    grid-auto-rows: 1fr;
+    gap: 1rem;
+    justify-items: center;
+}
+
+.projects-grid figure{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #000;
+    border-radius: 0.5rem;
+    width: a;
+    height: 100%;
+    aspect-ratio: 1;
+}
+
+.projects-grid img{
+    width: 100%;
+    height: 100%;
+    max-width: 25rem;
+    object-fit: contain;
+    margin-bottom: 1rem;
+}
+
+@media(min-width:600px){
+    .projects-grid{
+        grid-template-columns: repeat(2,minmax(150px,2fr));
     }
 }
